# pytest-parametrize

./: .editorconfig  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_and_deploy.yml  bump_version.yml  linting_and_testing.yml
pytest_parametrize/: __init__.py  parametrize.py
tests/functional/: test_parametrize.py
tests/unit/: test_parametrize.py
