[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytest-parametrize"
version = "1.0.0"
description = "pytest decorator for parametrizing test cases in a dict-way"
readme = "README.md"
authors = ["Marcin Skrobczyński <marcin@skrobczynski.pl>"]
license = "MIT"
keywords = ["pytest", "parametrize", "testing"]
homepage = "https://github.com/MarcinSkrobczynski/pytest-parametrize"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.0"
setuptools = [
    {version = "^75.0.0", python = "<3.10"}
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.0"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C90", # mccabe
    "UP", # pyupgrade
    "I", # isort
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "S", # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
